tests/snapshots/file@base@function@recursion.lox.snap
---
source: tests/common/mod.rs
description: "fun fib(n) {\n  if (n < 2) return n;\n  return fib(n - 1) + fib(n - 2);\n}\n\nprint fib(8); // expect: 21\n"
input_file: crafting_interpreters_test_files/function/recursion.lox
---
OUT: 
21

===
ERR:
