tests/snapshots/file@base@limit@too_many_constants.lox.snap
---
source: tests/common/mod.rs
description: "fun f() {\n  0; 1; 2; 3; 4; 5; 6; 7;\n  8; 9; 10; 11; 12; 13; 14; 15;\n  16; 17; 18; 19; 20; 21; 22; 23;\n  24; 25; 26; 27; 28; 29; 30; 31;\n  32; 33; 34; 35; 36; 37; 38; 39;\n  40; 41; 42; 43; 44; 45; 46; 47;\n  48; 49; 50; 51; 52; 53; 54; 55;\n  56; 57; 58; 59; 60; 61; 62; 63;\n  64; 65; 66; 67; 68; 69; 70; 71;\n  72; 73; 74; 75; 76; 77; 78; 79;\n  80; 81; 82; 83; 84; 85; 86; 87;\n  88; 89; 90; 91; 92; 93; 94; 95;\n  96; 97; 98; 99; 100; 101; 102; 103;\n  104; 105; 106; 107; 108; 109; 110; 111;\n  112; 113; 114; 115; 116; 117; 118; 119;\n  120; 121; 122; 123; 124; 125; 126; 127;\n  128; 129; 130; 131; 132; 133; 134; 135;\n  136; 137; 138; 139; 140; 141; 142; 143;\n  144; 145; 146; 147; 148; 149; 150; 151;\n  152; 153; 154; 155; 156; 157; 158; 159;\n  160; 161; 162; 163; 164; 165; 166; 167;\n  168; 169; 170; 171; 172; 173; 174; 175;\n  176; 177; 178; 179; 180; 181; 182; 183;\n  184; 185; 186; 187; 188; 189; 190; 191;\n  192; 193; 194; 195; 196; 197; 198; 199;\n  200; 201; 202; 203; 204; 205; 206; 207;\n  208; 209; 210; 211; 212; 213; 214; 215;\n  216; 217; 218; 219; 220; 221; 222; 223;\n  224; 225; 226; 227; 228; 229; 230; 231;\n  232; 233; 234; 235; 236; 237; 238; 239;\n  240; 241; 242; 243; 244; 245; 246; 247;\n  248; 249; 250; 251; 252; 253; 254; 255;\n\n  \"oops\"; // Error at '\"oops\"': Too many constants in one chunk.\n}\n"
input_file: crafting_interpreters_test_files/limit/too_many_constants.lox
---
OUT: 

===
ERR:
